# poetry_demo_project

./: pyproject.toml
ptr/: main.py
ptr/module/: run_me.py
scripts/: say_hi.py
